--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 :root {
-    --fg: #5f6941;
-    --bg: #10100c;
+    --fg: #3d4397;
+	--focus: #767ffa;
+    --bg: #0b0c10;
   }
   /* *{
     outline: red 2px solid;
@@ -27,7 +28,7 @@ body{
 }
 a{
     text-decoration: none;
-    color: var(--fg);
+    color: var(--focus);
 }
 .logo-img{
     width: 20rem;
@@ -35,11 +36,37 @@ a{
 .menu{
     display: flex;
     gap: 2rem;
+	margin-top: 5rem;
+	display: flex;
+    margin-inline: auto;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+.profile-wrap{
+	display:flex;
+	width: 23rem;
+	border: 2px solid var(--fg);
+	padding: 10px;
+}
+.profile-img{
+	width:10rem;
+	height:10rem;
+	border: 2px solid var(--fg);
+}
+.profile-info{
+	padding-inline: 20px;
+}
+.profile-flag{
+	width: 1.5rem;
+}
+.right{
+	width: 30rem;
 }
 .menu-button{
-    color: var(--fg);
-    width: 8rem;
-    height: 2.5rem;
+    width: 30rem;
+    height: 3.5rem;
     background-color: var(--bg);
     border: 2px solid var(--fg);
     display: flex;
@@ -51,25 +78,30 @@ a{
     -moz-box-shadow: 0px -8px 0px 0px var(--fg);
     font-size: 14pt;
 }
+.menu-button-img{
+	position: relative;
+	margin-right: 0.2rem;
+	top:2px;
+}
 .content{
-    width: 50%;
+    
     padding-block: 2rem;
     padding-inline: 2rem;
-    margin-top: 10rem;
     margin-inline: auto;
     background-color: var(--bg);
     border: 2px solid var(--fg);
     display: flex;
-    align-items: center;
     /* window decoration effect */
     box-shadow: 0px -15px 0px 0px var(--fg);
     -webkit-box-shadow: 0px -15px 0px 0px var(--fg);
     -moz-box-shadow: 0px -15px 0px 0px var(--fg);
     font-size: 14pt;
+	color: var(--focus);
+	gap: 2rem;
 }
 
 
-/* CRT Effect */
+/* crt effect */
 /* credits to creme (https://codepen.io/creme)*/
 
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
@@ -85,22 +117,18 @@ body {
 	height: 100%;
 }
 
-body {
-	position: relative;
-	overflow: hidden;
-}
 
 .noise {
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 100vw;
-	height: 100vh;
+	min-width: 100vw;
+	min-height: 100vh;
 	overflow: hidden;
 	z-index: 400;
 	opacity: 0.8;
 	pointer-events: none;
-  opacity: 1;
+  	opacity: 1;
 	z-index: 450;
 }
 
@@ -145,13 +173,13 @@ body {
 }
 
 .main {
-	position: fixed;
+	position: relative;
 	top: 0;
 	left: 0;
 	color: #fff;
 	font-size: 2rem;
-	width: 100vw;
-	height: 100vh;
+	min-width: 100vw;
+	min-height: 100vh;
 	background: var(--bg);
     background-image: url("./assets/bg.webp");
     background-size: 960px 540px;
@@ -295,3 +323,34 @@ body {
 		opacity: 1;
 	}
 }
+
+* {
+	box-sizing: border-box;
+}
+@media (max-width: 1020px) {
+
+	.content{
+		flex-direction: column;
+		padding-block: none;
+		padding-inline: none;
+		transform: scale(90%);
+		transform-origin: top center;
+		max-width: 100%;
+		overflow-x: hidden;
+	}
+	.profile-wrap{
+		width:30rem;
+		border: none;
+	}
+	.right {
+		width: 100%;
+		word-wrap: break-word; /* or use word-break if needed */
+		overflow-wrap: break-word;
+	}
+	.menu{
+		margin-top: 0;
+	}
+	.menu-button{
+		width: 90%;
+	}
+  }
