--- a/styles.css
+++ b/styles.css
@@ -278,7 +278,7 @@ body {
 	}
 }
 
-@keyframes scanlines {
+/* @keyframes scanlines {
 	from {
 		background: linear-gradient(to bottom, transparent 50%, rgba(0, 0, 0, .5) 51%);
 		background-size: 100% 4px;
@@ -287,7 +287,7 @@ body {
 		background: linear-gradient(to bottom, rgba(0, 0, 0, .5) 50%, transparent 51%);
 		background-size: 100% 4px;
 	}
-}
+} */
 
 @keyframes rgbText {
 	0% {
