--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --fg: #bababa;
+    --fg: #ffffff;
 	--focus: #ffffff;
     --bg: #080808;
   }
@@ -29,8 +29,7 @@ body{
     flex-direction: column;
 }
 a{
-    text-decoration: none;
-    color: var(--focus);
+    color: rgb(120, 105, 255);
 }
 .logo-img{
     width: 20rem;
@@ -77,6 +76,10 @@ a{
     -moz-box-shadow: 0px -8px 0px 0px var(--fg);
     font-size: 14pt;
 }
+.menu-button a{
+	color: --var(--focus) !important;
+	text-decoration: none !important;
+}
 .menu-button-img{
 	position: relative;
 	margin-right: 0.2rem;
@@ -100,7 +103,60 @@ a{
 	gap: 2rem;
 }
 
+.post-blurb{
+	margin-top: 2rem;
+	font-size: 14pt;
+	text-align: center;
+	outline: 1px solid white;
+	padding: 1rem;
+}
 
+.posts{
+	font-size: 14pt;
+	margin-bottom:5rem;
+}
+.post{
+	display: flex;
+	outline: 1px solid white;
+	margin-top: 2rem;
+}
+.album-art{
+	border-right: 1px solid white;
+}
+.album-art-img{
+	width: 12rem;
+	z-index: 999999;
+}
+.post-content{
+	padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.littleStoreIcons{
+	width: 1rem;
+}
+
+.download-wrapper{
+	width: 5rem;
+	height: 5rem;
+	position: relative;
+	left: 120px;
+	top: 55px;
+	display: inline;
+}
+#download{
+}
+
+#download img{
+	filter: invert(100%);
+	width: 100%;
+}
+.footer{
+	width: 100%;
+	height: 5rem;
+	margin-top: 2rem;
+}
 /* crt effect */
 /* credits to creme (https://codepen.io/creme)*/
 
