--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body{
     font-family: "Tiny5", sans-serif;
     font-weight: 400;
     font-style: normal;
+	background-image: url(assets/bg.webp);
 }
 .main{
 	padding-top: 5rem;
@@ -132,7 +133,9 @@ a{
 .littleStoreIcons{
 	width: 1rem;
 }
-
+.store-icons a{
+	text-decoration: none;
+}
 .download-wrapper{
 	width: 5rem;
 	height: 5rem;
@@ -234,6 +237,7 @@ body {
 	margin-inline: auto;
 	min-height: 100vh;
 	background: var(--bg);
+	background-image: url(assets/bg.webp);
     background-size: 960px 540px;
     background-position: 20%;
 }
