--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ a{
     font-size: 14pt;
 }
 .menu-button a{
-	color: --var(--focus) !important;
+	color: var(--focus) !important;
 	text-decoration: none !important;
 }
 .menu-button-img{
